RESOLVED FIXED209488
Memory::fastMappedBytes() is wrong
https://bugs.webkit.org/show_bug.cgi?id=209488
Summary Memory::fastMappedBytes() is wrong
Saam Barati
Reported 2020-03-24 12:48:04 PDT
....
Attachments
patch (1.38 KB, patch)
2020-03-24 16:53 PDT, Saam Barati
no flags
Saam Barati
Comment 1 2020-03-24 12:48:12 PDT
it's off by 1
Saam Barati
Comment 2 2020-03-24 16:53:54 PDT
Mark Lam
Comment 3 2020-03-24 17:03:41 PDT
Comment on attachment 394441 [details] patch r=me. This code is not compiled on 32-bit targets, right?
Saam Barati
Comment 4 2020-03-24 17:06:13 PDT
(In reply to Mark Lam from comment #3) > Comment on attachment 394441 [details] > patch > > r=me. This code is not compiled on 32-bit targets, right? correct. Wasm is 64-bit only
EWS
Comment 5 2020-03-24 17:28:02 PDT
Committed r258964: <https://trac.webkit.org/changeset/258964> All reviewed patches have been landed. Closing bug and clearing flags on attachment 394441 [details].
Radar WebKit Bug Importer
Comment 6 2020-03-24 17:29:13 PDT
Note You need to log in before you can comment on or make changes to this bug.