Memory::fastMappedBytes() is wrong https://bugs.webkit.org/show_bug.cgi?id=209488

Reviewed by Mark Lam.

* wasm/WasmMemory.cpp:
(JSC::Wasm::Memory::fastMappedBytes):


Canonical link: https://commits.webkit.org/222450@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258964 268f45cc-cd09-0410-ab3c-d52691b4dbfc