Source/JavaScriptCore/wasm/WasmMemory.cpp
@@ -358,7 +358,7 @@ size_t Memory::fastMappedRedzoneBytes()
 size_t Memory::fastMappedBytes()
 {
     static_assert(sizeof(uint64_t) == sizeof(size_t), "We rely on allowing the maximum size of Memory we map to be 2^32 + redzone which is larger than fits in a 32-bit integer that we'd pass to mprotect if this didn't hold.");
-    return static_cast<size_t>(std::numeric_limits<uint32_t>::max()) + fastMappedRedzoneBytes();
+    return (static_cast<size_t>(1) << 32) + fastMappedRedzoneBytes();
 }
 
 bool Memory::addressIsInActiveFastMemory(void* address)
